# Accessible-Camera-Operation

./: CMakeLists.txt  README _GNG2101.md  README.md
components/A4988/: A4988.c  CMakeLists.txt
components/A4988/include/: A4988.h
components/GY95T/: CMakeLists.txt  GY95T.c
components/GY95T/include/: GY95T.h  GY95T_Reg.h
components/I2Cdev/: CMakeLists.txt
components/MPU6050/: MPU6050.cpp  MPU6050_6Axis_MotionApps20.h
components/Remote_Motion/: CMakeLists.txt  Remote_Motion.c
components/Remote_Motion/include/: Remote_Motion.h
components/SK6812/: CMakeLists.txt  SK6812.c  led_rgb_hsv.c  led_strip_rmt_ws2812.c
components/SK6812/include/: SK6812.h  led_rgb_hsv.h  led_strip.h
components/XBoxController/: CMakeLists.txt  XboxController.cpp
components/XBoxController/include/: XBoxController.h
components/XBoxController_Asukiaaa/: CMakeLists.txt  source.py
components/i2c_peripheral/: CMakeLists.txt  i2c_peripheral.c
components/i2c_peripheral/include/: i2c_peripheral.h
components/struct_component/: CMakeLists.txt  struct_component.c
components/struct_component/include/: struct_component.h
main/: CMakeLists.txt  main.cpp  tasks.cpp
script/: main.py
