idf_component_register(
    SRCS            "XboxControllerNotificationParser.cpp"
                    "src/NimBLE2904.cpp"
                    "src/NimBLEAddress.cpp"
                    "src/NimBLEAdvertisedDevice.cpp"
                    "src/NimBLEAdvertising.cpp"
                    "src/NimBLEBeacon.cpp"
                    "src/NimBLECharacteristic.cpp"
                    "src/NimBLEClient.cpp"
                    "src/NimBLEDescriptor.cpp"
                    "src/NimBLEDevice.cpp"
                    "src/NimBLEEddystoneTLM.cpp"
                    "src/NimBLEEddystoneURL.cpp"
                    "src/NimBLEExtAdvertising.cpp"
                    "src/NimBLEHIDDevice.cpp"
                    "src/NimBLERemoteCharacteristic.cpp"
                    "src/NimBLERemoteDescriptor.cpp"
                    "src/NimBLERemoteService.cpp"
                    "src/NimBLEScan.cpp"
                    "src/NimBLESecurity.cpp"
                    "src/NimBLEServer.cpp"
                    "src/NimBLEService.cpp"
                    "src/NimBLEUtils.cpp"
                    "src/NimBLEUUID.cpp"
                    "src/nimble/esp_port/esp-hci/src/esp_nimble_hci.c"
                    "src/nimble/esp_port/port/src/esp_nimble_mem.c"
                    "src/nimble/ext/tinycrypt/src/aes_decrypt.c"
                    "src/nimble/ext/tinycrypt/src/aes_encrypt.c"
                    "src/nimble/ext/tinycrypt/src/cbc_mode.c"
                    "src/nimble/ext/tinycrypt/src/ccm_mode.c"
                    "src/nimble/ext/tinycrypt/src/cmac_mode.c"
                    "src/nimble/ext/tinycrypt/src/ctr_mode.c"
                    "src/nimble/ext/tinycrypt/src/ctr_prng.c"
                    "src/nimble/ext/tinycrypt/src/ecc.c"
                    "src/nimble/ext/tinycrypt/src/ecc_dh.c"
                    "src/nimble/ext/tinycrypt/src/ecc_dsa.c"
                    "src/nimble/ext/tinycrypt/src/ecc_platform_specific.c"
                    "src/nimble/ext/tinycrypt/src/hmac.c"
                    "src/nimble/ext/tinycrypt/src/hmac_prng.c"
                    "src/nimble/ext/tinycrypt/src/sha256.c"
                    "src/nimble/ext/tinycrypt/src/utils.c"
                    "src/nimble/nimble/controller/src/ble_ll.c"
                    "src/nimble/nimble/controller/src/ble_ll_adv.c"
                    "src/nimble/nimble/controller/src/ble_ll_conn.c"
                    "src/nimble/nimble/controller/src/ble_ll_conn_hci.c"
                    "src/nimble/nimble/controller/src/ble_ll_conn_priv.h"
                    "src/nimble/nimble/controller/src/ble_ll_ctrl.c"
                    "src/nimble/nimble/controller/src/ble_ll_dtm.c"
                    "src/nimble/nimble/controller/src/ble_ll_dtm_priv.h"
                    "src/nimble/nimble/controller/src/ble_ll_hci.c"
                    "src/nimble/nimble/controller/src/ble_ll_hci_ev.c"
                    "src/nimble/nimble/controller/src/ble_ll_iso.c"
                    "src/nimble/nimble/controller/src/ble_ll_priv.h"
                    "src/nimble/nimble/controller/src/ble_ll_rand.c"
                    "src/nimble/nimble/controller/src/ble_ll_resolv.c"
                    "src/nimble/nimble/controller/src/ble_ll_rfmgmt.c"
                    "src/nimble/nimble/controller/src/ble_ll_scan.c"
                    "src/nimble/nimble/controller/src/ble_ll_sched.c"
                    "src/nimble/nimble/controller/src/ble_ll_supp_cmd.c"
                    "src/nimble/nimble/controller/src/ble_ll_sync.c"
                    "src/nimble/nimble/controller/src/ble_ll_trace.c"
                    "src/nimble/nimble/controller/src/ble_ll_utils.c"
                    "src/nimble/nimble/controller/src/ble_ll_whitelist.c"
                    "src/nimble/nimble/drivers/nrf51/src/ble_hw.c"
                    "src/nimble/nimble/drivers/nrf51/src/ble_phy.c"
                    "src/nimble/nimble/drivers/nrf52/src/ble_hw.c"
                    "src/nimble/nimble/drivers/nrf52/src/ble_phy.c"
                    "src/nimble/nimble/drivers/nrf52/src/ble_phy_trace.c"
                    "src/nimble/nimble/host/mesh/src/access.c"
                    "src/nimble/nimble/host/mesh/src/access.h"
                    "src/nimble/nimble/host/mesh/src/adv.c"
                    "src/nimble/nimble/host/mesh/src/adv.h"
                    "src/nimble/nimble/host/mesh/src/aes-ccm.c"
                    "src/nimble/nimble/host/mesh/src/app_keys.c"
                    "src/nimble/nimble/host/mesh/src/app_keys.h"
                    "src/nimble/nimble/host/mesh/src/atomic.h"
                    "src/nimble/nimble/host/mesh/src/beacon.c"
                    "src/nimble/nimble/host/mesh/src/beacon.h"
                    "src/nimble/nimble/host/mesh/src/cdb.c"
                    "src/nimble/nimble/host/mesh/src/cfg.c"
                    "src/nimble/nimble/host/mesh/src/cfg.h"
                    "src/nimble/nimble/host/mesh/src/cfg_cli.c"
                    "src/nimble/nimble/host/mesh/src/cfg_srv.c"
                    "src/nimble/nimble/host/mesh/src/crypto.c"
                    "src/nimble/nimble/host/mesh/src/crypto.h"
                    "src/nimble/nimble/host/mesh/src/foundation.h"
                    "src/nimble/nimble/host/mesh/src/friend.c"
                    "src/nimble/nimble/host/mesh/src/friend.h"
                    "src/nimble/nimble/host/mesh/src/glue.c"
                    "src/nimble/nimble/host/mesh/src/health_cli.c"
                    "src/nimble/nimble/host/mesh/src/health_srv.c"
                    "src/nimble/nimble/host/mesh/src/heartbeat.c"
                    "src/nimble/nimble/host/mesh/src/heartbeat.h"
                    "src/nimble/nimble/host/mesh/src/light_model.c"
                    "src/nimble/nimble/host/mesh/src/light_model.h"
                    "src/nimble/nimble/host/mesh/src/lpn.c"
                    "src/nimble/nimble/host/mesh/src/lpn.h"
                    "src/nimble/nimble/host/mesh/src/mesh.c"
                    "src/nimble/nimble/host/mesh/src/mesh_priv.h"
                    "src/nimble/nimble/host/mesh/src/model_cli.c"
                    "src/nimble/nimble/host/mesh/src/model_srv.c"
                    "src/nimble/nimble/host/mesh/src/net.c"
                    "src/nimble/nimble/host/mesh/src/net.h"
                    "src/nimble/nimble/host/mesh/src/nodes.c"
                    "src/nimble/nimble/host/mesh/src/nodes.h"
                    "src/nimble/nimble/host/mesh/src/pb_adv.c"
                    "src/nimble/nimble/host/mesh/src/pb_gatt.c"
                    "src/nimble/nimble/host/mesh/src/prov.c"
                    "src/nimble/nimble/host/mesh/src/prov.h"
                    "src/nimble/nimble/host/mesh/src/prov_bearer.h"
                    "src/nimble/nimble/host/mesh/src/prov_device.c"
                    "src/nimble/nimble/host/mesh/src/provisioner.c"
                    "src/nimble/nimble/host/mesh/src/provisioner.h"
                    "src/nimble/nimble/host/mesh/src/proxy.c"
                    "src/nimble/nimble/host/mesh/src/proxy.h"
                    "src/nimble/nimble/host/mesh/src/rpl.c"
                    "src/nimble/nimble/host/mesh/src/rpl.h"
                    "src/nimble/nimble/host/mesh/src/settings.c"
                    "src/nimble/nimble/host/mesh/src/settings.h"
                    "src/nimble/nimble/host/mesh/src/shell.c"
                    "src/nimble/nimble/host/mesh/src/shell.h"
                    "src/nimble/nimble/host/mesh/src/subnet.c"
                    "src/nimble/nimble/host/mesh/src/subnet.h"
                    "src/nimble/nimble/host/mesh/src/transport.c"
                    "src/nimble/nimble/host/mesh/src/transport.h"
                    "src/nimble/nimble/host/services/ans/src/ble_svc_ans.c"
                    "src/nimble/nimble/host/services/bas/src/ble_svc_bas.c"
                    "src/nimble/nimble/host/services/dis/src/ble_svc_dis.c"
                    "src/nimble/nimble/host/services/gap/src/ble_svc_gap.c"
                    "src/nimble/nimble/host/services/gatt/src/ble_svc_gatt.c"
                    "src/nimble/nimble/host/services/ias/src/ble_svc_ias.c"
                    "src/nimble/nimble/host/services/ipss/src/ble_svc_ipss.c"
                    "src/nimble/nimble/host/services/lls/src/ble_svc_lls.c"
                    "src/nimble/nimble/host/src/ble_att.c"
                    "src/nimble/nimble/host/src/ble_att_clt.c"
                    "src/nimble/nimble/host/src/ble_att_cmd.c"
                    "src/nimble/nimble/host/src/ble_att_cmd_priv.h"
                    "src/nimble/nimble/host/src/ble_att_priv.h"
                    "src/nimble/nimble/host/src/ble_att_svr.c"
                    "src/nimble/nimble/host/src/ble_eddystone.c"
                    "src/nimble/nimble/host/src/ble_gap.c"
                    "src/nimble/nimble/host/src/ble_gap_priv.h"
                    "src/nimble/nimble/host/src/ble_gattc.c"
                    "src/nimble/nimble/host/src/ble_gatts.c"
                    "src/nimble/nimble/host/src/ble_gatts_lcl.c"
                    "src/nimble/nimble/host/src/ble_gatt_priv.h"
                    "src/nimble/nimble/host/src/ble_hs.c"
                    "src/nimble/nimble/host/src/ble_hs_adv.c"
                    "src/nimble/nimble/host/src/ble_hs_adv_priv.h"
                    "src/nimble/nimble/host/src/ble_hs_atomic.c"
                    "src/nimble/nimble/host/src/ble_hs_atomic_priv.h"
                    "src/nimble/nimble/host/src/ble_hs_cfg.c"
                    "src/nimble/nimble/host/src/ble_hs_conn.c"
                    "src/nimble/nimble/host/src/ble_hs_conn_priv.h"
                    "src/nimble/nimble/host/src/ble_hs_flow.c"
                    "src/nimble/nimble/host/src/ble_hs_flow_priv.h"
                    "src/nimble/nimble/host/src/ble_hs_hci.c"
                    "src/nimble/nimble/host/src/ble_hs_hci_cmd.c"
                    "src/nimble/nimble/host/src/ble_hs_hci_evt.c"
                    "src/nimble/nimble/host/src/ble_hs_hci_priv.h"
                    "src/nimble/nimble/host/src/ble_hs_hci_util.c"
                    "src/nimble/nimble/host/src/ble_hs_id.c"
                    "src/nimble/nimble/host/src/ble_hs_id_priv.h"
                    "src/nimble/nimble/host/src/ble_hs_log.c"
                    "src/nimble/nimble/host/src/ble_hs_mbuf.c"
                    "src/nimble/nimble/host/src/ble_hs_mbuf_priv.h"
                    "src/nimble/nimble/host/src/ble_hs_misc.c"
                    "src/nimble/nimble/host/src/ble_hs_mqueue.c"
                    "src/nimble/nimble/host/src/ble_hs_periodic_sync.c"
                    "src/nimble/nimble/host/src/ble_hs_periodic_sync_priv.h"
                    "src/nimble/nimble/host/src/ble_hs_priv.h"
                    "src/nimble/nimble/host/src/ble_hs_pvcy.c"
                    "src/nimble/nimble/host/src/ble_hs_pvcy_priv.h"
                    "src/nimble/nimble/host/src/ble_hs_resolv.c"
                    "src/nimble/nimble/host/src/ble_hs_resolv_priv.h"
                    "src/nimble/nimble/host/src/ble_hs_shutdown.c"
                    "src/nimble/nimble/host/src/ble_hs_startup.c"
                    "src/nimble/nimble/host/src/ble_hs_startup_priv.h"
                    "src/nimble/nimble/host/src/ble_hs_stop.c"
                    "src/nimble/nimble/host/src/ble_ibeacon.c"
                    "src/nimble/nimble/host/src/ble_l2cap.c"
                    "src/nimble/nimble/host/src/ble_l2cap_coc.c"
                    "src/nimble/nimble/host/src/ble_l2cap_coc_priv.h"
                    "src/nimble/nimble/host/src/ble_l2cap_priv.h"
                    "src/nimble/nimble/host/src/ble_l2cap_sig.c"
                    "src/nimble/nimble/host/src/ble_l2cap_sig_cmd.c"
                    "src/nimble/nimble/host/src/ble_l2cap_sig_priv.h"
                    "src/nimble/nimble/host/src/ble_monitor.c"
                    "src/nimble/nimble/host/src/ble_monitor_priv.h"
                    "src/nimble/nimble/host/src/ble_sm.c"
                    "src/nimble/nimble/host/src/ble_sm_alg.c"
                    "src/nimble/nimble/host/src/ble_sm_cmd.c"
                    "src/nimble/nimble/host/src/ble_sm_lgcy.c"
                    "src/nimble/nimble/host/src/ble_sm_priv.h"
                    "src/nimble/nimble/host/src/ble_sm_sc.c"
                    "src/nimble/nimble/host/src/ble_store.c"
                    "src/nimble/nimble/host/src/ble_store_util.c"
                    "src/nimble/nimble/host/src/ble_uuid.c"
                    "src/nimble/nimble/host/src/ble_uuid_priv.h"
                    "src/nimble/nimble/host/store/config/src/ble_store_config.c"
                    "src/nimble/nimble/host/store/config/src/ble_store_config_conf.c"
                    "src/nimble/nimble/host/store/config/src/ble_store_config_priv.h"
                    "src/nimble/nimble/host/store/config/src/ble_store_nvs.c"
                    "src/nimble/nimble/host/util/src/addr.c"
                    "src/nimble/nimble/transport/ram/src/ble_hci_ram.c"
                    "src/nimble/porting/nimble/src/endian.c"
                    "src/nimble/porting/nimble/src/hal_timer.c"
                    "src/nimble/porting/nimble/src/hal_uart.c"
                    "src/nimble/porting/nimble/src/mem.c"
                    "src/nimble/porting/nimble/src/nimble_port.c"
                    "src/nimble/porting/nimble/src/os_cputime.c"
                    "src/nimble/porting/nimble/src/os_cputime_pwr2.c"
                    "src/nimble/porting/nimble/src/os_mbuf.c"
                    "src/nimble/porting/nimble/src/os_mempool.c"
                    "src/nimble/porting/nimble/src/os_msys_init.c"
                    "src/nimble/porting/npl/freertos/src/nimble_port_freertos.c"
                    "src/nimble/porting/npl/freertos/src/npl_os_freertos.c"

    INCLUDE_DIRS    "include"
                    "src"
                    "src/nimble"
    REQUIRES driver 
    PRIV_REQUIRES arduino
)